# OCEmulator

./: .gitignore  CMakeLists.txt  Makefile  OCEmulator.kdev4  OCEmulator.pro  OCEmulator.pro.user.3.2-pre1  README.md  build.sh  compinstance.cpp  compinstance.h  component.cpp  component.h  componentbase.cpp  componentbase.h  componentfilesystem.cpp  componentfilesystem.h  componentgpu.cpp  componentgpu.h  componentkeyboard.cpp  componentkeyboard.h  componentscreen.cpp  componentscreen.h  computerinstance.cpp  computerinstance.h  emuscreen.cpp  emuscreen.h  eventhandler.cpp  eventhandler.h  filesystemcomponent.cpp  filesystemcomponent.h  fonts.qrc  httprequest.cpp  httprequest.h  init.lua  lua.hpp  main.cpp  mainwindow.ui  ocewindow.cpp  ocewindow.h  release.sh  (+4 more)
.kdev4/: OCEmulator.kdev4
CMakeModules/: FindLua.cmake
components/: componentbase.cpp  componentfilesystem.h  componentscreen.h
gui/: ocewindow.cpp  screenswidget.cpp  screenswidget.h
src/: CMakeLists.txt  Makefile  OCEmulator  OCEmulator.cbp  compinstance.cpp  compinstance.h  component.cpp  componentgpu.cpp  componentgpu.h  emuscreen.cpp  emuscreen.cpp.old  emuscreen.h  emuscreen.h.old  filesystemcomponent.cpp  init.lua  main.cpp  mainwindow.cpp  mainwindow.ui  moc_emuscreen.cpp  moc_mainwindow.cpp  screencomponent.cpp  screencomponent.h  src.pro  src.pro.autosave  text.frag  text.vert  ui_mainwindow.h
src/freetype-gl/: CMakeLists.txt  Makefile  cmake_install.cmake
